finished html part and now for css

--- a/friends.html
+++ b/friends.html
@@ -83,7 +83,7 @@
                             </span>
                         </div>
                 </div>
-                <div class="friend_column">
+                <div class="friend__column">
                     <div class="friend__now-listening">
                         <span class="">FTISLAND(feat.Tan)
                         </span>
