--- a/index.html
+++ b/index.html
@@ -37,18 +37,21 @@
 <main class="chats">
 <ul class="chats__list">
 <li class="chats__chat chat">
+    <a href="chat.html" class="">
     <div class="chat__column"></div>
-    <img class="chat__avatar" src="images/avatar.jpg"/>
+    <img class="chat__avatar g-avatar" src="images/avatar.jpg"/>
     <div class="chat__content">
         <span class="chat__username">Tani</span>
         <span class="chat__preview">여보</span>
     </div>
     <div class="chat__column">
         <span class="chat__timestamp">
-yesterday
+        yesterday
         </span>
     </div>
+    </a>
 </li>
+
 
 </ul>
 
