--- a/chat.html
+++ b/chat.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://kit.fontawesome.com/a430ffd4b3.js"></script>
+    <link rel="stylesheet" href="css/styles.css" class="">
     <title>Chat | Kakao Clone</title>
 </head>
 <body>
