--- a/more.html
+++ b/more.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/styles.css" class="">
     <script src="https://kit.fontawesome.com/a430ffd4b3.js"></script>
     <title>More | Kakao Clone</title>
 </head>
