--- a/chat.html
+++ b/chat.html
@@ -25,18 +25,18 @@
 
     </div>    
 <header class="header">
-    <div class="header__column">
+    <div class="header__header-column">
                 <a href="index.html" class="header__back-btn">
-                <i class="fas fa-arrow-left fa-2x"></i>
+                <i class="fas fa-arrow-left"></i>
             </a>
-        <h1 class="header__title">Best Friend</h1>
+        <h1 class="header__title">탄과장</h1>
     </div>
 
-    <div class="header__column">
-        <span class="header__icon"><i class="fas fa-search"></i></span>
-        <div class="header__icon">
+    <div class="header__header-column">
+        <span class="header__icons"><i class="fas fa-search"></i></span>
+        <span class="header__icons">
         <i class="fas fa-bars"></i>
-        </div>    
+        </span>    
 
     </div>
 </header>
