--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css" class="">
     <script src="https://kit.fontawesome.com/a430ffd4b3.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900,900i&display=swap" rel="stylesheet">
     <title>Chats | Kakao Clone</title>
 </head>
 <body>
@@ -67,6 +66,7 @@
     </li>
     <li class="nav__list-item">
         <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">8</div>
             <i class="fas fa-comment"></i>
         </a>
     </li>
