--- a/more.html
+++ b/more.html
@@ -30,9 +30,9 @@
     </div>
 
     <div class="header__column">
-        <span class="header__icon"><i class="fas fa-search"></i></span>
-        <span class="header__icon"><i class="fas fa-qrcode"></i></span>
-        <span class="header__icon">
+        <span class="header__icons"><i class="fas fa-search"></i></span>
+        <span class="header__icons"><i class="fas fa-qrcode"></i></span>
+        <span class="header__icons">
             <a href="settings.html" class="">
                 <i class="fas fa-cog"></i></span>
             </a>
