--- a/index.html
+++ b/index.html
@@ -39,17 +39,22 @@
 <ul class="chats__list">
 <li class="chats__chat chat">
     <a href="chat.html" class="">
-    <div class="chat__column"></div>
-    <img class="chat__avatar g-avatar" src="images/avatar.jpg"/>
-    <div class="chat__content">
-        <span class="chat__username">Tani</span>
-        <span class="chat__preview">여보</span>
-    </div>
-    <div class="chat__column">
-        <span class="chat__timestamp">
-        yesterday
-        </span>
-    </div>
+        <div class="chats__chat friend friend--lg">
+            <div class="friend__column">
+                    <img src="images/avatar.jpg" alt="" class="m-avatar friend__avatar">
+                    <div class="friend__content">
+                        <span class="friend__name">
+                        탄과장
+                        </span>
+                        <span class="friend__bottom-text">
+                        탄보덕보
+                        </span>
+                    </div>
+            </div>
+            <div class="friend__column">
+                   <span class="chat__timestamp">Yesterday</span>
+            </div>
+        </div>
     </a>
 </li>
 
