--- a/settings.html
+++ b/settings.html
@@ -25,11 +25,12 @@
 
     </div>    
 <header class="header">
-    <div class="header__column">
-                <a href="more.html" class="header__back-btn">
-                <i class="fas fa-arrow-left"></i>
+    <div class="header__header-column">
+            <a href="more.html" class="header__back-btn">
+                    <i class="fas fa-arrow-left"></i>
             </a>
-        <h1 class="header__title">Settings</h1>
+
+            <h1 class="header__title">Settings</h1>         
     </div>
 
     <div class="header__column">
@@ -61,7 +62,53 @@
             </ul>
 
     </section>
- 
+    <section class="settings__sections">
+            <ul class="settings__list">
+                    <li class="settings__setting">
+                        <span class="settings__icon">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                        <span class="settings__title">Privacy</span>
+                    </li>
+                    <li class="settings__setting">
+                        <span class="settings__icon">
+                            <i class="far fa-bell"></i>
+                        </span>
+                        <span class="settings__title">Notifications</span>
+                    </li>
+                    <li class="settings__setting">
+                        <span class="settings__icon">
+                            <i class="far fa-user"></i>
+                        </span>
+                        <span class="settings__title">Friends</span>
+                    </li>
+            </ul>
+
+    </section>
+    <section class="settings__sections">
+            <ul class="settings__list">
+                    <li class="settings__setting">
+                        <span class="settings__icon">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                        <span class="settings__title">Privacy</span>
+                    </li>
+                    <li class="settings__setting">
+                        <span class="settings__icon">
+                            <i class="far fa-bell"></i>
+                        </span>
+                        <span class="settings__title">Notifications</span>
+                    </li>
+                    <li class="settings__setting">
+                        <span class="settings__icon">
+                            <i class="far fa-user"></i>
+                        </span>
+                        <span class="settings__title">Friends</span>
+                    </li>
+            </ul>
+
+    </section>
+
 </main>
 
 
