--- a/chat.html
+++ b/chat.html
@@ -34,9 +34,7 @@
 
         <div class="header__header-column">
            <span class="header__icons"><i class="fas fa-search"></i></span>
-           <span class="header__icons">
-           <i class="fas fa-bars"></i>
-           </span>    
+           <span class="header__icons"><i class="fas fa-bars"></i></span>    
         </div>
     </header>
 
@@ -45,21 +43,21 @@
         <span class="chat__timestamp">Saturday, January 4, 2020</span>
         <li class="incoming-message message">
             <img src="images/avatar.jpg" alt="" class="g-avatar message__avatar">
-            <div class="message__content">
-                <div>
-                    <span class="message__author">Best Friend</span>
-                    <div class="message__bubble">Congrats! I love you
-                    </div>
-                </div>
-                <span class="message__timestamp">5:56 pm</span>
+            <div class="message__content-incoming">
+                <div class="message__author">탄과장</div>
+                <div class="message__bubble">Congrats! I love youdsfdsfsdfsCongrats! I love youdsfdsfsdfsCongrats! I love youdsfdsfsdfsCongrats! I love youdsfdsfsdfsCongrats! I love youdsfdsfsdfsCongrats! I love youdsfdsfsdfs</div>
             </div>
-         
-
+            <div class="message__timestamp">
+                <span class="incoming-timestamp">5:56 pm</span>
+            </div>
+          
         </li>
         <li class="sent-message message">
-                <span class="message__timestamp">5:57 pm</span>
-                <div class="message__content">
-                    <div class="message__bubble">Thank you See you soon!</div>
+                <div class="message__timestamp">
+                    <span class="sent-timestamp"> 5:57 pm</span>
+                </div>
+                <div class="message__content-sent">
+                    <div class="message__bubble">Thank you See you soon! sdfsfdsfsdfsfsfsfsd</div>
                 </div>         
         </li>
     </ul>
