--- a/friends.html
+++ b/friends.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="friend__column">
                     <div class="friend__now-listening">
-                        <span class="">지독하게-FTISLAND(feat.Tan)
+                        <span>지독하게-FTISLAND(feat.Tan)
                         </span>
                         <i class="fas fa-play"></i>
                     </div>
