--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1 class="header__title">Chats</h1>
     </div>
 
-    <div class="header__column">
+    <div class="header__header__column">
         <span class="header__icons"><i class="fas fa-search"></i></span>
         <span class="header__icons"><i class="fas fa-comment-medical"></i></span>
         <span class="header__icons"><i class="fas fa-cog"></i></span>
