--- a/more.html
+++ b/more.html
@@ -132,6 +132,11 @@
 </ul>
 
 </nav>
+<div class="bigScreen">
+    <span class="bigScreen__text">
+        Please make your screen small!
+    </span>
+</div>
 
 </body>
 </html>
