--- a/settings.html
+++ b/settings.html
@@ -110,7 +110,11 @@
     </section>
 
 </main>
-
+<div class="bigScreen">
+    <span class="bigScreen__text">
+        Please make your screen small!
+    </span>
+</div>
 
 </body>
 </html>
