--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 <div class="bigScreen">
     <span class="bigScreen__text">
-        Please make your screen small!
+        Please make your screen small! 😀
     </span>
 </div>
 
