again gave emoji to all pages

--- a/find.html
+++ b/find.html
@@ -128,8 +128,7 @@
 </nav>
 <div class="bigScreen">
     <span class="bigScreen__text">
-        Please make your screen small!
-    </span>
+        Please make your screen small! 😀
 </div>
 
 </body>
