--- a/friends.html
+++ b/friends.html
@@ -125,7 +125,7 @@
 </nav>
 <div class="bigScreen">
     <span class="bigScreen__text">
-        Please make your screen small!
+        Please make your screen small! 😀
     </span>
 </div>
 
